# crypto-signer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
benches/: eip712.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: typed_message.rs
src/: hw.rs  kms.rs  lib.rs  signer.rs  types.rs
src/backends/: local_k256.rs  mod.rs
src/chains/: bitcoin.rs  cosmos.rs  mod.rs  solana.rs
src/evm/: abi.rs  domain.rs  eip712.rs  messages.rs  mod.rs  network.rs
tests/: cosmos_signdoc.rs  domain_separator.rs  eip712_vectors.rs  evm_flow.rs  no_std_gate.rs
